--- a/index.html
+++ b/index.html
@@ -15,3 +15,7 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=345670199824199&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+
+<button> Purchase</button>
+<button> Add to Cart</button>
+<button> View Content</button>
